Deploys/Infra/11-Observability/ELK/fd-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-es
  namespace: default
  labels:
    k8s-app: fluentd-es
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-es
  template:
    metadata:
      labels:
        k8s-app: fluentd-es
        kubernetes.io/cluster-service: "true"
      # 此注释确保如果节点被驱逐，fluentd不会被驱逐，支持关键的基于 pod 注释的优先级方案。
      # annotations:
      # scheduler.alpha.kubernetes.io/critical-pod: ""
    spec:
      serviceAccountName: fluentd-es
      priorityClassName: high-priority
      containers:
        - name: fluentd-es
          image: quay.io/fluentd_elasticsearch/fluentd:v3.0.1
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /data/docker/containers
              readOnly: true
            - name: config-volume
              mountPath: /etc/fluent/config.d
      nodeSelector:
        beta.kubernetes.io/fluentd-ds-ready: "true"
      tolerations:
        - operator: Exists
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /data/docker/containers
        - name: config-volume
          configMap:
            name: fluentd-config
