Deploys/Infra/11-Observability/ELK/es+kb+ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elk-logging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer-cloudflare-letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/hostname: kibana.cloudnative.love
    external-dns.alpha.kubernetes.io/ttl: "120"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: logging-kibana
  namespace: elk-logging
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.cloudnative.love
      http:
        paths:
          - backend:
              service:
                name: logging-kb-http
                port:
                  number: 5601
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kibana.cloudnative.love
      secretName: kibana-server-tls
